# rucco

./: .gitignore  Cargo.toml  README.md
resources/: Ruccofile.toml  classic.tar  languages.json  linear.tar
rucco_lib/: Cargo.toml
rucco_lib/src/: compute_regex.rs  config.rs  languages.rs  lib.rs  render.rs  section.rs  segment.rs
rucco_lib/src/templates/: classic.rs  mod.rs  plain_markdown.rs.todo
rucco_lib/tests/: lib.rs  lib_test.rs
src/: main.rs
