[package]
name = "rucco_lib"
version = "0.1.0"
authors = ["johan gall <johan.gall@gmail.com>"]

[dependencies]
log = "~0"
syntect = "~3" # syntax highlighting
hoedown = "~6" # markdown html rendering
toml = "~0" # conf files
regex = "~1" # parsing
maud = "~0" # templates
maud_macros = "~0"
lazy_static = "~1"

[dev-dependencies]
env_logger = "~0"
